# PXN-Reader

./: .gitignore  PXN-Reader.html  README.md  app.py  install_offline.bat  pyproject.toml  requirements.txt  start_pxn_reader.bat
.github/workflows/: build-pages.yml  package-offline-wheels.yml
content/lore/: world_001.md
content/main/: story_001.md
content/side/: quest_001.md
example/: sample.md
narrative_sheet/: __init__.py  __main__.py  classifier.py  database.py  exporters.py  model.py  parser.py  repository.py  site_generator.py
tests/: test_parser.py  test_streamlit_repository.py
