[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "narrative-sheet"
version = "0.1.0"
description = "Convert game narrative Markdown into Excel and Word documents."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
narrative-sheet = "narrative_sheet.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
